# angelscript-playground

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  script.cpp  sfml_window.cpp  vcpkg.json
data/: program.as  sfml_string.as
scripts/: scripts_ext.cpp  scripts_ext.h  scripts_sfml.cpp  scripts_sfml.h  scripts_tools.cpp  scripts_tools.h  sfml_clock.cpp  sfml_clock.h  sfml_string.cpp  sfml_string.h  sfml_time.cpp  sfml_time.h  sfml_vectors.cpp  sfml_vectors.h
tools/: CMakeLists.txt  script_server.cpp  tokens.cpp
